--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,165 +5,165 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: https://1808.cf 二爷翻墙_1, server: 121.166.1.193, port: 30030, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_2, server: 202.108.15.135, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_3, server: 162.159.243.235, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_4, server: 162.159.243.233, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: https://1808.cf 二爷翻墙_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf _1, server: 221.156.187.229, port: 30002, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf _2, server: 202.108.15.135, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf _3, server: 162.159.243.235, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf _4, server: 162.159.243.233, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf _5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf _6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf _7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf _8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf _9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf _10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf _11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf _12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf _13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf _14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf _15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: 📢 谷歌FCM
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -186,21 +186,21 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - https://1808.cf 二爷翻墙_1
-      - https://1808.cf 二爷翻墙_2
-      - https://1808.cf 二爷翻墙_3
-      - https://1808.cf 二爷翻墙_4
-      - https://1808.cf 二爷翻墙_5
-      - https://1808.cf 二爷翻墙_6
-      - https://1808.cf 二爷翻墙_7
-      - https://1808.cf 二爷翻墙_8
-      - https://1808.cf 二爷翻墙_9
-      - https://1808.cf 二爷翻墙_10
-      - https://1808.cf 二爷翻墙_11
-      - https://1808.cf 二爷翻墙_12
-      - https://1808.cf 二爷翻墙_13
-      - https://1808.cf 二爷翻墙_14
-      - https://1808.cf 二爷翻墙_15
+      - 二爷翻墙 https://1808.cf _1
+      - 二爷翻墙 https://1808.cf _2
+      - 二爷翻墙 https://1808.cf _3
+      - 二爷翻墙 https://1808.cf _4
+      - 二爷翻墙 https://1808.cf _5
+      - 二爷翻墙 https://1808.cf _6
+      - 二爷翻墙 https://1808.cf _7
+      - 二爷翻墙 https://1808.cf _8
+      - 二爷翻墙 https://1808.cf _9
+      - 二爷翻墙 https://1808.cf _10
+      - 二爷翻墙 https://1808.cf _11
+      - 二爷翻墙 https://1808.cf _12
+      - 二爷翻墙 https://1808.cf _13
+      - 二爷翻墙 https://1808.cf _14
+      - 二爷翻墙 https://1808.cf _15
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
